--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
-ul li {
-    list-style-type: georgian;
+.app-wrapper {
+    display: grid;
+    margin: 0 auto;
+    width: 1200px;
+    grid-template-areas:
+    "h h"
+    "n c";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-grap: 10px;
+}
+
+.header {
+    grid-area: h;
+    background-color: green;
+}
+
+.header img {
+    width: 20px;
+}
+
+.nav {
+    grid-area: n;
+    background-color: burlywood;
+}
+
+.content {
+    grid-area: c;
+    background-color: cornflowerblue;
 }
